# casa-companion-mobile

./: .gitignore  MOBILE_BROWSER_AUDIT.md  README.md  fly.jenny.toml  fly.jimmy.toml  fly.peter.toml  fly.toml  generate-icons.py  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  voice-ui-audit-report.md
.github/workflows/: fly-deploy.yml
ARCHIVE/voice-agent/: FIRMWARE_INTEGRATION.md  TEST_PLAN.md  relay-test.html
ARCHIVE/voice-agent/firmware/main/: CMakeLists.txt  audio_task.h  ble_task.c  ble_task.h  common.h  main.c  nfc_task.c  power_mgmt.c  power_mgmt.h  wake_word.h  websocket_task.c  wifi_task.c  wifi_task.h
Casa Companion/voice-agent/: PROTOCOL.md  README.md  package.json  ws-relay.js
docs/: character-roster.md  voice-directions.md  voice-prompt.md
public/: manifest.json
scripts/: add-new-characters.mjs  audit_characters.mjs  generate-character-voices.mjs  generate-voice-directions.mjs  sentry-monitor.mjs
src/: App.tsx  index.css  instrument.ts  main.tsx  vite-env.d.ts
src/components/: BottomNav.tsx  CharacterCard.tsx  CharacterShowcase.tsx  ChatTranscript.tsx  InputBar.tsx  MicButton.tsx  ModeIcon.tsx  ParentalLock.tsx
src/hooks/: useAudioWorklet.ts  useRecorder.ts  useSimpleVoiceChat.ts  useSpeech.ts  useTranscription.ts  useVoiceChat.ts  useVoiceSocket.ts
src/lib/: characterConfig.ts  characterVideos.ts  characterVoices.ts  characters.ts  modes.ts  personalization.ts  settings.ts
src/pages/: CharacterDetail.tsx  Favorites.tsx  Landing.tsx  Settings.tsx
src/types/: index.ts  speech-recognition.d.ts
(+62 files in other folders)
